[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://gamefont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/heart.png" type="Texture" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="Level" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 16 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_right = 112.0
margin_bottom = 192.0

[node name="coins_levels" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer/coins_levels"]
margin_right = 54.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="coins_label" type="Label" parent="UI/MarginContainer/VBoxContainer/coins_levels/MarginContainer"]
margin_right = 54.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.560784, 0.419608, 0.235294, 0.952941 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.992157, 0.992157, 1 )
text = "Coins"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer/coins_levels"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="level_label" type="Label" parent="UI/MarginContainer/VBoxContainer/coins_levels/MarginContainer2"]
margin_right = 54.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.560784, 0.419608, 0.235294, 0.952941 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 0.678431 )
text = "Level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins_levels_values" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 112.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer/coins_levels_values"]
margin_right = 54.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="coins_value" type="Label" parent="UI/MarginContainer/VBoxContainer/coins_levels_values/MarginContainer"]
margin_right = 54.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.560784, 0.419608, 0.235294, 0.952941 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.992157, 0.992157, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer/coins_levels_values"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="level_value" type="Label" parent="UI/MarginContainer/VBoxContainer/coins_levels_values/MarginContainer2"]
margin_right = 54.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.560784, 0.419608, 0.235294, 0.952941 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.992157, 0.992157, 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 112.0
margin_bottom = 156.0

[node name="Button1" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_right = 112.0
margin_bottom = 14.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Testing"
align = 0

[node name="Button2" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_top = 18.0
margin_right = 112.0
margin_bottom = 32.0
theme = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
align = 0

[node name="Button3" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_top = 36.0
margin_right = 112.0
margin_bottom = 50.0
theme = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
align = 0

[node name="Button4" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 68.0
theme = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
align = 0

[node name="Button5" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_top = 72.0
margin_right = 112.0
margin_bottom = 86.0
theme = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
align = 0

[node name="Button6" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_top = 90.0
margin_right = 112.0
margin_bottom = 104.0
theme = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
align = 0

[node name="Button7" type="Button" parent="UI/MarginContainer/VBoxContainer/ButtonContainer"]
margin_top = 108.0
margin_right = 112.0
margin_bottom = 122.0
theme = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
align = 0

[node name="HealthSpriteContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 112.0
margin_bottom = 160.0

[node name="heart1" type="Sprite" parent="UI/MarginContainer/VBoxContainer/HealthSpriteContainer"]
position = Vector2( 1, 8 )
texture = ExtResource( 4 )
offset = Vector2( 16, 8 )

[node name="heart2" type="Sprite" parent="UI/MarginContainer/VBoxContainer/HealthSpriteContainer"]
position = Vector2( 71, 8 )
texture = ExtResource( 4 )
offset = Vector2( 16, 8 )

[node name="heart3" type="Sprite" parent="UI/MarginContainer/VBoxContainer/HealthSpriteContainer"]
position = Vector2( 36, 15 )
texture = ExtResource( 4 )
offset = Vector2( 16, 8 )

[node name="Button" type="Button" parent="UI"]
margin_right = 18.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description_Container" type="MarginContainer" parent="UI"]
visible = false
margin_left = 173.0
margin_top = 13.0
margin_right = 403.0
margin_bottom = 211.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Description_Container"]
margin_right = 230.0
margin_bottom = 198.0
color = Color( 0.866667, 0.811765, 0.584314, 0.847059 )

[node name="MarginContainer" type="MarginContainer" parent="UI/Description_Container"]
margin_right = 230.0
margin_bottom = 198.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="description_label" type="Label" parent="UI/Description_Container/MarginContainer"]
margin_left = 16.0
margin_top = 58.0
margin_right = 214.0
margin_bottom = 140.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "set a super trap! will damage all of the type of enemy that steps on it."
valign = 1
autowrap = true

[node name="LongPress" type="Timer" parent="."]
one_shot = true
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button1" to="." method="_on_Button1_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button1" to="." method="_on_Button1_button_up"]
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button4" to="." method="_on_Button4_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button4" to="." method="_on_Button4_button_up"]
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button5" to="." method="_on_Button5_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button5" to="." method="_on_Button5_button_up"]
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button6" to="." method="_on_Button6_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button6" to="." method="_on_Button6_button_up"]
[connection signal="button_down" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button7" to="." method="_on_Button7_button_down"]
[connection signal="button_up" from="UI/MarginContainer/VBoxContainer/ButtonContainer/Button7" to="." method="_on_Button7_button_up"]
[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="LongPress" to="." method="_on_LongPress_timeout"]
